[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/art/ui/button/BttnConfiguracion.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnConfiguracionPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelLimestone.png" type="Texture" id=3]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=4]
[ext_resource path="res://assets/art/ui/button/BttnRegresar.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/button/BttnRegresarPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/button/BttnSelectPressed.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/panel/PanelWood.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/button/BttnSelect.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/panel/PanelMarbleFlat.png" type="Texture" id=10]
[ext_resource path="res://assets/art/ui/panel/PanelStone.png" type="Texture" id=11]
[ext_resource path="res://assets/art/ui/button/BttnPrev.png" type="Texture" id=12]
[ext_resource path="res://assets/art/ui/button/BttnPrevHover.png" type="Texture" id=13]
[ext_resource path="res://assets/art/ui/button/BttnNext.png" type="Texture" id=14]
[ext_resource path="res://assets/art/ui/button/BttnNextHover.png" type="Texture" id=15]
[ext_resource path="res://src/UserInterface/Menus/CharacterSelection.gd" type="Script" id=16]

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
next_scene = "res://src/Main/MainGame"
prev_scene = "ConfigureGame"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -269.0
margin_right = 462.0
margin_bottom = 269.0
texture = ExtResource( 3 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -388.0
margin_top = 40.0
margin_right = 388.0
margin_bottom = 75.0
theme = ExtResource( 4 )
text = "Seleccionar personaje"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -178.0
margin_right = 291.5
margin_bottom = 146.0
texture = ExtResource( 8 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="CharacterView" type="NinePatchRect" parent="NinePatchRect/NinePatchRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -135.0
margin_right = 256.0
margin_bottom = 135.0
texture = ExtResource( 10 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="BttnPrev" type="TextureButton" parent="NinePatchRect/NinePatchRect/CharacterView"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -20.0
margin_right = 18.0
margin_bottom = 26.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="Control" type="Control" parent="NinePatchRect/NinePatchRect/CharacterView"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Sprite" type="Sprite" parent="NinePatchRect/NinePatchRect/CharacterView/Control"]
centered = false

[node name="BttnNext" type="TextureButton" parent="NinePatchRect/NinePatchRect/CharacterView"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -20.0
margin_right = 34.0
margin_bottom = 26.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -281.0
margin_top = -137.0
margin_right = -33.0
margin_bottom = 137.0

[node name="Ability1" type="NinePatchRect" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_right = 248.0
margin_bottom = 60.0
texture = ExtResource( 11 )
patch_margin_left = 96
patch_margin_top = 30
patch_margin_right = 96
patch_margin_bottom = 30

[node name="Ability2" type="NinePatchRect" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 64.0
margin_right = 248.0
margin_bottom = 124.0
texture = ExtResource( 11 )
patch_margin_left = 96
patch_margin_top = 30
patch_margin_right = 96
patch_margin_bottom = 30

[node name="CharacterExtras" type="NinePatchRect" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 248.0
margin_bottom = 274.0
texture = ExtResource( 10 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 50
patch_margin_bottom = 50

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -104.0
margin_right = 388.0
margin_bottom = -40.0
alignment = 1

[node name="BttnRegresar" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_right = 256.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="BttnSelect" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )

[node name="BttnConfiguracion" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[connection signal="toggled" from="NinePatchRect/NinePatchRect/CharacterView/BttnPrev" to="." method="_on_BttnPrev_toggled"]
[connection signal="pressed" from="NinePatchRect/NinePatchRect/CharacterView/BttnNext" to="." method="_on_BttnNext_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnRegresar" to="." method="_on_BttnRegresar_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnSelect" to="." method="_on_BttnSelect_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnConfiguracion" to="." method="_on_BttnConfiguracion_pressed"]
